<resources>
    <string name="app_name">SMD Assignment 1</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Contact Information</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="sender_info">Sender Information</string>
    <string name="receiver_info">Receiver Information</string>
    <string name="review">Review Information</string>
    <string name="columns">"Name          Country          Address          Contact Info"</string>
</resources>
