<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".SenderFormActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/tvSenderDetails"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="@dimen/paddingTop"
        android:text="@string/sender_info"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
    android:background="@drawable/edittext_background"
    android:padding="@dimen/padding"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/tvSenderDetails"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/paddingTop"
    android:layout_marginStart="@dimen/paddingMargin"
    android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Full Name Input -->
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
    android:background="@drawable/edittext_background"
    android:padding="@dimen/padding"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/etEmail"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/paddingTop"
    android:layout_marginStart="@dimen/paddingMargin"
    android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Contact Information Input -->
    <EditText
        android:id="@+id/etContactInfo"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
    android:background="@drawable/edittext_background"
    android:padding="@dimen/padding"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/etFullName"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/paddingTop"
    android:layout_marginStart="@dimen/paddingMargin"
    android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Country Input -->
    <EditText
        android:id="@+id/etCountry"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
    android:background="@drawable/edittext_background"
    android:padding="@dimen/padding"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/etContactInfo"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/paddingTop"
    android:layout_marginStart="@dimen/paddingMargin"
    android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Address Input -->
    <EditText
        android:id="@+id/etAddress"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
    android:background="@drawable/edittext_background"
    android:padding="@dimen/padding"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/etCountry"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="@dimen/paddingTop"
    android:layout_marginStart="@dimen/paddingMargin"
    android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Next Button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingMargin"
        android:layout_marginBottom="@dimen/paddingMargin" />

</androidx.constraintlayout.widget.ConstraintLayout>
