<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    tools:context=".ReceiverFormActivity">

    <!-- Header -->
    <TextView
        android:id="@+id/tvReceiverDetails"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="@dimen/paddingTop"
        android:text="@string/receiver_info"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Receiver Email Input -->
    <EditText
        android:id="@+id/etReceiverEmail"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/padding"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvReceiverDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginStart="@dimen/paddingMargin"
        android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Receiver Full Name Input -->
    <EditText
        android:id="@+id/etReceiverName"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/padding"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etReceiverEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginStart="@dimen/paddingMargin"
        android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Receiver Contact Information Input -->
    <EditText
        android:id="@+id/etReceiverContactInfo"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/padding"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etReceiverName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginStart="@dimen/paddingMargin"
        android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Receiver Country Input -->
    <EditText
        android:id="@+id/etReceiverCountry"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/country"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/padding"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etReceiverContactInfo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginStart="@dimen/paddingMargin"
        android:layout_marginEnd="@dimen/paddingMargin" />

    <!-- Receiver Address Input -->
    <EditText
        android:id="@+id/etReceiverAddress"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:textColor="@android:color/black"
        android:textColorHint="@color/darker_gray"
        android:background="@drawable/edittext_background"
        android:padding="@dimen/padding"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etReceiverCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginStart="@dimen/paddingMargin"
        android:layout_marginEnd="@dimen/paddingMargin"/>

    <!-- Next Button -->
    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:backgroundTint="@color/red"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/etReceiverAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/paddingMargin"
        android:layout_marginBottom="@dimen/paddingMargin" />

</androidx.constraintlayout.widget.ConstraintLayout>
